Fri Aug  5 12:18:20 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (check_funcall): try respond_to? first if redefined.
	  [Bug #5158]

Fri Aug 05 09:48:22 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Import RubyGems 1.8.7:
	  Added missing require for `gem uninstall --format-executable`.

	  The correct name of the executable being uninstalled is now displayed
	  with --format-executable.

	  Fixed `gem unpack uninstalled_gem` default version picker.

	  RubyGems no longer claims a nonexistent gem can be uninstalled.

	  `gem which` no longer claims directories are requirable files.

	  `gem cleanup` continues cleaning up gems if one can't be uninstalled
	  due to permissions.  Issue #82.

	  Gem repository directories are no longer created world-writable.
	  Patch by Sakuro OZAWA.  [Ruby 1.9 - Bug #4930]


Fri Aug  5 09:48:00 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>


Fri Aug  5 07:00:31 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/io/console/test_io_console.rb (test_noctty): daemon() on
	  Fedora Rawhide seems not to detach the controlling terminal,
	  when the argument noclose is non-zero.  ref: [Bug #5135]

Thu Aug  4 23:48:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* thread_pthread.c (native_cond_signal): retry to call pthread_cond_signal
	  and pthread_cond_broadcast if they return EAGAIN in
	  native_cond_signal and native_cond_broadcast, respectively.
	  It is for the pthread implementation of Mac OS X 10.7 (Lion).
	  fixes #5155.  [ruby-dev:44342].

	* thread_pthread.c (native_cond_broadcast): ditto.

	* thread_pthread.c (struct cached_thread_entry): stop using
	  pthread_cond_t and its functions directly.

	* thread_pthread.c (register_cached_thread_and_wait): ditto.

	* thread_pthread.c (use_cached_thread): ditto.

Thu Aug  4 20:29:41 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: when Solaris cc, use $(CC) to link shared libs.

Thu Aug  4 20:19:11 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
